@@ -1,6 +1,6 @@
 ;;; w3m-favicon.el --- utilities for handling favicon in emacs-w3m
 
-;; Copyright (C) 2001, 2002, 2003, 2004, 2005, 2007, 2009
+;; Copyright (C) 2001-2005, 2007, 2009, 2011
 ;; TSUCHIYA Masatoshi <tsuchiya@namazu.org>
 
 ;; Authors: Yuuichi Teranishi  <teranisi@gohome.org>,
@@ -88,7 +88,7 @@ If this variable is nil, never expired."
   :type '(integer :size 0))
 
 (defcustom w3m-favicon-type
-  (let ((types '(png gif pbm xpm bmp))
+  (let ((types '(gif png pbm xpm bmp))
 	type)
     (catch 'det
       (while types
@@ -238,9 +238,11 @@ favicon is ready."
 (defun w3m-favicon-convert (data type)
   "Convert the favicon DATA in TYPE to the favicon image and return it."
   (when (or (not (eq type 'ico))
-	    ;; Since most of favicons are the `ico' types, we make sure
-	    ;; of the magic-numbers only as for them.
-	    (string-equal "\x00\x00\x01\x00" (substring data 0 4)))
+	    ;; Is it really in the ico format?
+	    (string-equal "\x00\x00\x01\x00" (substring data 0 4))
+	    ;; Some icons named favicon.ico are animated GIFs.
+	    (and (member (substring data 0 5) '("GIF87" "GIF89"))
+		 (setq type 'gif)))
     (let ((height (or (cdr w3m-favicon-size)
 		      (w3m-static-if (featurep 'xemacs)
 			  (face-height 'default)
