@@ -1,3 +1,8 @@
+2011-10-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-favicon.el (w3m-favicon-type): Prefer gif.
+	(w3m-favicon-convert): Work for gif icons named "favicon.ico".
+
 2011-09-08  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m-lnum.el (w3m-lnum-face): Remove face alias.
